# ELE340_GruppeA

./: .gitignore  README.md
GUI/: ele340gui.py  gui.py  logg.txt  logg_plotter_gui 2.py  logg_plotter_gui.py  main.py  matlab_plot.asv  matlab_plot.m  pid_gui.py  test2.txt
GUI/Kode_for_plots/: generell_plot.py  plot_step_two_runs.py  steprespons_plot.m
GUI/Kode_for_plots/fig/: prossesskonstant.fig
GUI/Kode_for_plots/plots/: bevis_kalibring.csv  plot_adckalibrert.py  step10cm_inn1.csv  step10cm_inn2.csv  step10cm_inn3.csv  step10cm_innut.csv
GUI/matlabplots/: step11cm_tid_avstand.csv  step1_tid_avstand.csv  step_innut2_tid_avstand.csv  step_kjorvekk_tid_avstand.csv  stepakkurat100mm_tid_avstand.csv
GUI/plots/: 350 steg kp521 ti0.8 kb2.txt  350 steg kp521.txt  350 steg u aw kp521 ti0.8 kb0.txt  adckalibrert 2.txt  logg_20251111_141540.txt  logg_20251111_142016.txt  logg_20251111_143151.txt  logg_20251111_143406.txt  logg_20251113_095555.txt  logg_20251113_095643.txt  logg_20251113_100542.txt  logg_20251113_101210.txt  logg_20251113_102059.txt  logg_20251113_102121.txt  logg_20251113_103612.txt  logg_20251113_111922.txt  logg_20251113_112008.txt  logg_20251113_115327.txt  logg_20251113_120005.txt  logg_20251113_120038.txt  logg_20251113_120327.txt  logg_20251113_130758.txt  logg_20251113_134442.txt  logg_20251113_134827.txt  logg_20251113_135117.txt  logg_20251113_135528.txt  logg_20251113_135815.txt  logg_20251113_140008.txt  logg_20251113_140247.txt  logg_20251113_140633.txt  logg_20251113_141046.txt  logg_20251113_141255.txt  logg_20251113_141430.txt  logg_20251113_143133.txt  logg_20251113_143225.txt  logg_20251113_143333.txt  logg_20251113_143512.txt  logg_20251113_144742.txt  logg_20251113_145232.txt  logg_20251113_145342.txt  (+26 more)
kalibrering_avstandssensor/mcu/: .cproject  .mxproject  .project  kalibrering_avstanssensor 2.launch  kalibrering_avstanssensor.ioc  maaling_sensor Debug.launch
kalibrering_avstandssensor/mcu/Core/Inc/: main.h  stm32f3xx_it.h
kalibrering_avstandssensor/mcu/Core/Src/: main.c  stm32f3xx_hal_msp.c  stm32f3xx_it.c
kalibrering_avstandssensor/mcu/Debug/: kalibrering_avstanssensor.elf  kalibrering_avstanssensor.list  kalibrering_avstanssensor.map  makefile
kalibrering_avstandssensor/mcu/Debug/Core/Src/: main.cyclo  main.su  stm32f3xx_hal_msp.cyclo  stm32f3xx_hal_msp.su  stm32f3xx_it.cyclo  stm32f3xx_it.su
kalibrering_avstandssensor/mcu/Debug/Drivers/STM32F3xx_HAL_Driver/Src/: subdir.mk
kalibrering_avstandssensor/python/: calibrate_sensor 2.py  lookup 2.h  lookup.csv  lookup.h  lookup2.csv  lookup2.h  lookup3.csv  lookup3.h  lookup4.h  plot_lookup 2.py  plot_lookup_minimal.py
modell/: antiwindup.fig  data 2.m  data.asv  data.m  ki.fig  lookup.csv  lookup.fig  lookup.m  mawu.mat  modell 2.slxc  modell.slx  modell.slx.original  modell.slxc  modellutenkobling.slx  modellutenkobling.slxc  mrespons.fig  pidrespons.fig  pidresponsuaw.fig  plot_kp.m  plotmothverandre.m  plotting.m  pådragsbegrensning.fig  signal.m  stoy.m  stoy2.m  støymm.fig  test.m  uawrespons.fig  uawu.mat  utenwindup.fig  windup.fig
modell/plots/: 350 steg 521 08 5.txt  350 steg kp521 ti0.8 kb5.txt  LOGGING.txt  step10cm_inn2.txt
modell/slprj/_jitprj/: jitEngineAccessInfo.mat  sBvxkpl5ueZRqiNqJU1HV3D.l  sBvxkpl5ueZRqiNqJU1HV3D.mat  sVgWM3ne9Znl8eyHxVBZZdG.l  sVgWM3ne9Znl8eyHxVBZZdG.mat  saxZxKgDsnrwQlF9mNkMg6D.l  saxZxKgDsnrwQlF9mNkMg6D.mat  srwQAhzY4TawREwXL4BqxAC.l  srwQAhzY4TawREwXL4BqxAC.mat  sx5wvbnFhj4mO8oTB30QlQF.l  sx5wvbnFhj4mO8oTB30QlQF.mat  szC7PtJ3VAAcA1BtF39jlWF.l  szC7PtJ3VAAcA1BtF39jlWF.mat
modell/slprj/_sfprj/EMLReport/: emlReportAccessInfo.mat  sBvxkpl5ueZRqiNqJU1HV3D.mat  sVgWM3ne9Znl8eyHxVBZZdG.mat  saxZxKgDsnrwQlF9mNkMg6D.mat  srwQAhzY4TawREwXL4BqxAC.mat  sx5wvbnFhj4mO8oTB30QlQF.mat  szC7PtJ3VAAcA1BtF39jlWF.mat
modell/slprj/_sfprj/modell/: amsi_serial.mat
modell/slprj/_sfprj/modell/_self/sfun/info/: binfo.mat
modell/slprj/_sfprj/precompile/: IOVXb4MzYNKh6gj1ktkwyF.mat  Xja1e3YVaw6JYgzd0xcjLG.mat  autoInferAccessInfo.mat  jihjoL1DckZbcm8vaAbwQC.mat  kf6nMLBoo7dT3OjOpmhPcE.mat  lFMyGrTXwN7a22CCXy48YF.mat  oZzI4Dth2ongrjGFg6fEk.mat
modell/slprj/sim/varcache/modell/: checksumOfCache.mat  varInfo.mat
modell/slprj/sim/varcache/modell/tmwinternal/: simulink_cache.xml
modell/slprj/sim/varcache/modellutenkobling/: checksumOfCache.mat  varInfo.mat
modell/slprj/sim/varcache/modellutenkobling/tmwinternal/: simulink_cache.xml
sensor_styrenode/: .mxproject  CMakeLists.txt  testkode.c
sensor_styrenode/Core/Inc/: adc.h  dma.h  gpio.h  lookup.h  main.h  pid 2.h  pid.h  sensorNode.h  stm32f3xx_hal_conf.h  stm32f3xx_it.h  styreNode.h  tim.h  usart.h
sensor_styrenode/Core/Inc/lookupbackup/: lookup 2.h  lookup.h  lookup5.h
sensor_styrenode/Core/Src/: adc.c  dma.c  gpio.c  main.c  pid.c  sensorNode.c  stm32f3xx_it.c  styreNode.c  tim.c  usart.c
sensor_styrenode/Drivers/STM32F3xx_LL_Driver/Inc/: stm32f3xx_ll_adc.h
sensor_styrenode/HAL/Core/: stm32f3xx_hal_msp 2.c
sensor_styrenode/STM32CubeIDE/: .cproject  .project  STM32F303VCTX_FLASH.ld  sensor_styrenode (1).launch  sensor_styrenode.launch
